--- a/website/src/content/docs/docs/howtos/Generate client libraries/07multipart.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/07multipart.mdx
@@ -67,6 +67,8 @@ public void upload(MultipartRequest body);
 ```
 
 ```go
+type Client struct {}
+
 type MultipartRequest struct {
     ID                string
     Address           Address
