--- a/.chronus/changes/fix_paging-2025-6-28-16-10-17.md
+++ b/.chronus/changes/fix_paging-2025-6-28-16-10-17.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-client-generator-core"
 ---
 
-Handle intersection case when doing page metadata mapping.
+Find the correct first segment before doing page segments mapping.
