refine with review

--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -71,4 +71,4 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 
 ### Decorators
 
-- [`@legacyHierarchyBuilding`](./decorators.md#@Azure.ClientGenerator.Core.Legacy.legacyHierarchyBuilding)
+- [`@hierarchyBuilding`](./decorators.md#@Azure.ClientGenerator.Core.Legacy.hierarchyBuilding)
